<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAgregarMov"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary_blue"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movimiento_agregar_titulo"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:padding="@dimen/padding_l"
        app:layout_constraintTop_toBottomOf="@id/toolbarAgregarMov"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Contenido scrollable -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_l"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/btnAgregar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Categoría -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/categoria"
                android:layout_width="match_parent" />

            <AutoCompleteTextView
                android:id="@+id/categoriaPicker"
                style="@style/InputDropdown"
                android:hint="@string/hint_seleccionar_categoria" />

            <!-- Nombre -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/nombre"
                android:paddingTop="@dimen/section_spacing"/>

            <EditText
                android:id="@+id/etNombre"
                style="@style/InputText"
                android:hint="@string/hint_nombre_movimiento"/>

            <!-- Movimiento fijo -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/movimiento_fijo"
                android:paddingTop="@dimen/section_spacing"/>

            <AutoCompleteTextView
                android:id="@+id/esFijoPicker"
                style="@style/InputDropdown"
                android:hint="@string/hint_seleccionar"/>

            <!-- Cuenta -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/cuenta"
                android:paddingTop="@dimen/section_spacing"/>

            <AutoCompleteTextView
                android:id="@+id/medioPagoPicker"
                style="@style/InputDropdown"
                android:hint="@string/hint_seleccionar_cuenta"/>

            <!-- Tipo -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/tipo"
                android:paddingTop="@dimen/section_spacing"/>

            <AutoCompleteTextView
                android:id="@+id/tipoPicker"
                style="@style/InputDropdown"
                android:hint="@string/hint_seleccionar"/>

            <!-- Monto -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/monto"
                android:paddingTop="@dimen/section_spacing"/>

            <EditText
                android:id="@+id/etMonto"
                style="@style/InputText"
                android:hint="@string/hint_monto"
                android:inputType="numberDecimal"/>

            <!-- Fecha -->
            <TextView
                style="@style/LabelStyle"
                android:text="@string/fecha"
                android:paddingTop="@dimen/section_spacing"/>

            <EditText
                android:id="@+id/etFechaAdd"
                style="@style/InputText"
                android:focusable="false"
                android:hint="@string/hint_fecha"/>
        </LinearLayout>

    </ScrollView>

    <!-- Botón Confirmar -->
    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="@dimen/padding_l"
        android:text="@string/confirmar"
        android:textColor="@color/button_text"
        android:background="@drawable/bg_button_pill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
