<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAgregarCuenta"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_blue"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/agregar_cuenta"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/tvAgregarCuentaTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agregar_cuenta"
        android:textSize="@dimen/text_title"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="@dimen/padding_screen"
        app:layout_constraintTop_toBottomOf="@id/toolbarAgregarCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_screen"
        app:layout_constraintTop_toBottomOf="@id/tvAgregarCuentaTitulo"
        app:layout_constraintBottom_toTopOf="@id/btnConfirmAddCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Nombre -->
            <TextView
                android:text="@string/nombre"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etNombreCuentaAdd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:background="@drawable/edittext_bg"
                android:padding="@dimen/padding_field"
                android:hint="@string/hint_cuenta"/>

            <!-- Monto -->
            <TextView
                android:layout_marginTop="@dimen/margin_section"
                android:text="@string/monto_actual"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etMontoCuentaAdd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:background="@drawable/edittext_bg"
                android:padding="@dimen/padding_field"
                android:inputType="numberDecimal"
                android:hint="@string/hint_monto"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnConfirmAddCuenta"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/confirmar"
        android:textColor="@color/button_text"
        android:background="@drawable/rounded_button"
        android:layout_margin="@dimen/padding_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
